# dcmt-cpp

./: .clang-tidy  .cmake-format.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benches/: CMakeLists.txt  test-bench.cpp  test-complexity.cpp
cmake/: get_cpm.cmake
docs/: CMakeLists.txt  conf.py  reference.rst
include/dcmt/: dcmt.h
src/: CMakeLists.txt  dcmt.cpp
tests/: CMakeLists.txt  test-dcmt521.cpp  test-dcmt521_31.cpp  test-expand.cpp  test-new_example2.cpp  test-readme.cpp
